--- a/docker/stacks/13ft/compose.yaml
+++ b/docker/stacks/13ft/compose.yaml
@@ -10,11 +10,18 @@ services:
     networks:
       - proxy_private
     labels:
+      # Glance
+      glance.name: 13ft
+      # glance.icon: sh:13ft
+      glance.url: https://${THIRTEENFT_URL_PREFIX:-13ft.}${NETWORK_DOMAIN}
+      glance.description: Paywall removal
+      glance.category: tools
+      # Traefik
       traefik.enable: "true"
-      # Frontend => Router
+      # Traefik, Router
       traefik.http.routers.13ft.entrypoints: websecure
       traefik.http.routers.13ft.rule: Host(`${THIRTEENFT_URL_PREFIX:-13ft.}${NETWORK_DOMAIN}`)
       traefik.http.routers.13ft.tls.certresolver: dns-cloudflare
-      # Frontend => Services
+      # Traefik, Services
       traefik.http.routers.13ft.service: 13ft
       traefik.http.services.13ft.loadbalancer.server.port: 5000
