--- a/docker/stacks/immich/compose.yaml
+++ b/docker/stacks/immich/compose.yaml
@@ -1,5 +1,3 @@
-include:
-  - ../../networks/proxy_private.yaml
 #
 # WARNING: To install Immich, follow our guide: https://immich.app/docs/install/docker-compose
 #
@@ -8,6 +6,8 @@ include:
 # https://github.com/immich-app/immich/releases/latest/download/docker-compose.yml
 #
 # The compose file on main may not be compatible with the latest release.
+
+name: immich
 
 services:
   immich-server:
@@ -19,44 +19,17 @@ services:
     volumes:
       # Do not edit the next line. If you want to change the media storage location on your system, edit the value of UPLOAD_LOCATION in the .env file
       - ${UPLOAD_LOCATION}:/data
-      - server.data.upload.upload:/data/upload
-      - server.data.upload.thumbs:/data/thumbs
       - /etc/localtime:/etc/localtime:ro
     env_file:
       - .env
-    # ports:
-    #   - '2283:2283'
+    ports:
+      - '2283:2283'
     depends_on:
       - redis
       - database
     restart: always
     healthcheck:
       disable: false
-    networks:
-      - immich
-      - proxy_private
-    labels:
-      # Glance
-      glance.name: Immich
-      glance.icon: sh:immich
-      glance.url: https://${IMMICH_URL_PREFIX:-immich.}${NETWORK_DOMAIN}
-      glance.description: Image library with phone sync
-      glance.category: personal
-      glance.id: immich
-      # What's Up Docker
-      wud.watch: true
-      wud.watch.digest: false
-      wud.display.icon: sh:immich
-      wud.tag.include: ^v\d+\.\d+\.\d+$$
-      # Traefik
-      traefik.enable: "true"
-      # Frontend => Router
-      traefik.http.routers.immich.entrypoints: websecure
-      traefik.http.routers.immich.rule: Host(`${IMMICH_URL_PREFIX:-immich.}${NETWORK_DOMAIN}`)
-      traefik.http.routers.immich.tls.certresolver: dns-cloudflare
-      # Frontend => Services
-      traefik.http.routers.immich.service: immich
-      traefik.http.services.immich.loadbalancer.server.port: 2283
 
   immich-machine-learning:
     container_name: immich_machine_learning
@@ -73,18 +46,6 @@ services:
     restart: always
     healthcheck:
       disable: false
-    networks:
-      - immich
-    labels:
-      # Glance
-      glance.name: Machine Learning
-      glance.parent: immich
-      glance.category: personal
-      # What's Up Docker
-      wud.watch: true
-      wud.watch.digest: false
-      wud.display.icon: sh:immich
-      wud.tag.include: ^v\d+\.\d+\.\d+$$
 
   redis:
     container_name: immich_redis
@@ -92,58 +53,22 @@ services:
     healthcheck:
       test: redis-cli ping || exit 1
     restart: always
-    networks:
-      - immich
-    labels:
-      # Glance
-      glance.name: Redis
-      glance.parent: immich
-      glance.category: personal
-      # What's Up Docker
-      wud.watch: true
-      wud.watch.digest: false
-      wud.display.icon: sh:redis
-      wud.tag.include: ^\d+\.\d+-alpine$$
 
   database:
     container_name: immich_postgres
     image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:32324a2f41df5de9efe1af166b7008c3f55646f8d0e00d9550c16c9822366b4a
-    shm_size: 128mb
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_DB: ${DB_DATABASE_NAME}
       POSTGRES_INITDB_ARGS: '--data-checksums'
+      # Uncomment the DB_STORAGE_TYPE: 'HDD' var if your database isn't stored on SSDs
+      # DB_STORAGE_TYPE: 'HDD'
     volumes:
       # Do not edit the next line. If you want to change the database storage location on your system, edit the value of DB_DATA_LOCATION in the .env file
       - ${DB_DATA_LOCATION}:/var/lib/postgresql/data
+    shm_size: 128mb
     restart: always
-    networks:
-      - immich
-    labels:
-      # Glance
-      glance.name: PostgreSQL
-      glance.parent: immich
-      glance.category: personal
-      # What's Up Docker
-      wud.watch: true
-      wud.watch.digest: false
-      wud.display.icon: sh:postgresql
-      wud.tag.include: ^pg14-v\d+\.\d+\.\d+$$
-      # Traefik
 
 volumes:
   model-cache:
-  server.data.upload.thumbs:
-    driver_opts:
-      type: nfs
-      o: addr=10.0.0.10,nolock,soft,rw
-      device: :/mnt/storage/application_data/immich/server/upload/thumbs
-  server.data.upload.upload:
-    driver_opts:
-      type: nfs
-      o: addr=10.0.0.10,nolock,soft,rw
-      device: :/mnt/storage/application_data/immich/server/upload/upload
-
-networks:
-  immich:
