immich: attempt fix networking breakage

--- a/docker/stacks/immich/compose.override.yaml
+++ b/docker/stacks/immich/compose.override.yaml
@@ -70,6 +70,10 @@ services:
       wud.display.icon: sh:postgresql
       wud.tag.include: ^pg14-v\d+\.\d+\.\d+$$
 
+networks:
+  default:
+    internal: true
+
 volumes:
   server.data.upload.thumbs:
     driver_opts:
