--- a/docker/stacks/immich/compose.override.yaml
+++ b/docker/stacks/immich/compose.override.yaml
@@ -10,6 +10,7 @@ services:
       - server.data.upload.thumbs:/data/thumbs
     ports: !reset []
     networks:
+      - immich
       - proxy_private
     labels:
       # Glance
@@ -35,6 +36,8 @@ services:
       traefik.http.services.immich.loadbalancer.server.port: 2283
 
   immich-machine-learning:
+    networks:
+      - immich
     labels:
       # Glance
       glance.name: Machine Learning
@@ -47,6 +50,8 @@ services:
       wud.tag.include: ^v\d+\.\d+\.\d+$$
 
   redis:
+    networks:
+      - immich
     labels:
       # Glance
       glance.name: Redis
@@ -59,6 +64,8 @@ services:
       wud.tag.include: ^\d+\.\d+-alpine$$
 
   database:
+    networks:
+      - immich
     labels:
       # Glance
       glance.name: PostgreSQL
@@ -71,8 +78,7 @@ services:
       wud.tag.include: ^pg14-v\d+\.\d+\.\d+$$
 
 networks:
-  default:
-    internal: true
+  immich:
 
 volumes:
   server.data.upload.thumbs:
