spotizerr: update wud labels to target alpine releases of redis

--- a/docker/stacks/spotizerr/redis.yaml
+++ b/docker/stacks/spotizerr/redis.yaml
@@ -17,7 +17,8 @@ services:
       wud.watch: true
       wud.watch.digest: false
       wud.display.icon: sh:redis
-      wud.tag.include: ^\d+\.\d+\.\d+$$
+      wud.tag.include: ^\d+\.\d+\.\d+-alpine$$
+
 
 volumes:
   redis-data:
