--- a/docker/stacks/bitwarden/compose.override.yaml
+++ b/docker/stacks/bitwarden/compose.override.yaml
@@ -3,7 +3,7 @@ include:
 
 services:
   mssql:
-    image: ghcr.io/bitwarden/mssql:2025.7.3
+    image: ghcr.io/bitwarden/mssql:2025.8.0
     env_file: !override
       - .env
     volumes:
@@ -22,7 +22,7 @@ services:
       wud.tag.include: ^\d+\.\d+\.\d+$$
 
   web:
-    image: ghcr.io/bitwarden/web:2025.7.2
+    image: ghcr.io/bitwarden/web:2025.8.0
     env_file: !override
       - .env
     volumes:
@@ -38,11 +38,12 @@ services:
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
+      wud.link.template: https://https://github.com/bitwarden/server/releases/tag/v$${major}.$${minor}.$${patch}
       wud.display.icon: sh:bitwarden
       wud.tag.include: ^\d+\.\d+\.\d+$$
 
   attachments:
-    image: ghcr.io/bitwarden/attachments:2025.7.3
+    image: ghcr.io/bitwarden/attachments:2025.8.0
     env_file: !override
       - .env
     volumes:
@@ -59,7 +60,7 @@ services:
       wud.tag.include: ^\d+\.\d+\.\d+$$
 
   api:
-    image: ghcr.io/bitwarden/api:2025.7.3
+    image: ghcr.io/bitwarden/api:2025.8.0
     env_file: !override
       - .env
     volumes:
@@ -78,7 +79,7 @@ services:
       wud.tag.include: ^\d+\.\d+\.\d+$$
 
   identity:
-    image: ghcr.io/bitwarden/identity:2025.7.3
+    image: ghcr.io/bitwarden/identity:2025.8.0
     env_file: !override
       - .env
     volumes:
@@ -98,7 +99,7 @@ services:
       wud.tag.include: ^\d+\.\d+\.\d+$$
 
   sso:
-    image: ghcr.io/bitwarden/sso:2025.7.3
+    image: ghcr.io/bitwarden/sso:2025.8.0
     env_file: !override
       - .env
     volumes:
@@ -118,7 +119,7 @@ services:
       wud.tag.include: ^\d+\.\d+\.\d+$$
 
   admin:
-    image: ghcr.io/bitwarden/admin:2025.7.3
+    image: ghcr.io/bitwarden/admin:2025.8.0
     env_file: !override
       - .env
     volumes:
@@ -137,7 +138,7 @@ services:
       wud.tag.include: ^\d+\.\d+\.\d+$$
 
   icons:
-    image: ghcr.io/bitwarden/icons:2025.7.3
+    image: ghcr.io/bitwarden/icons:2025.8.0
     env_file: !override
       - .env
     volumes:
@@ -155,7 +156,7 @@ services:
       wud.tag.include: ^\d+\.\d+\.\d+$$
 
   notifications:
-    image: ghcr.io/bitwarden/notifications:2025.7.3
+    image: ghcr.io/bitwarden/notifications:2025.8.0
     env_file: !override
       - .env
     volumes:
@@ -173,7 +174,7 @@ services:
       wud.tag.include: ^\d+\.\d+\.\d+$$
 
   events:
-    image: ghcr.io/bitwarden/events:2025.7.3
+    image: ghcr.io/bitwarden/events:2025.8.0
     env_file: !override
       - .env
     volumes:
@@ -191,7 +192,7 @@ services:
       wud.tag.include: ^\d+\.\d+\.\d+$$
 
   nginx:
-    image: ghcr.io/bitwarden/nginx:2025.7.3
+    image: ghcr.io/bitwarden/nginx:2025.8.0
     ports: !reset []
     volumes:
       - /srv/application_data/bitwarden/logs/nginx:/var/log/nginx
@@ -208,6 +209,11 @@ services:
       glance.name: Nginx
       glance.parent: bitwarden
       glance.category: personal
+      # What's Up Docker
+      wud.watch: true
+      wud.watch.digest: false
+      wud.display.icon: sh:nginx
+      wud.tag.include: ^\d+\.\d+\.\d+$$
       # Traefik
       traefik.enable: "true"
       # Traefik, Router
