--- a/docker/stacks/spotizerr/komodo.toml
+++ b/docker/stacks/spotizerr/komodo.toml
@@ -26,6 +26,9 @@ TIMEZONE=[[TIMEZONE]]
 # SPOTIZERR_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
+# UID=
+# GID=
+
 MULTIMEDIA_HOST=[[MULTIMEDIA_HOST]]
 MULTIMEDIA_USER=[[MULTIMEDIA_USER]]
 MULTIMEDIA_PASS=[[MULTIMEDIA_PASS]]
