--- a/docker/stacks/immich/compose.override.yaml
+++ b/docker/stacks/immich/compose.override.yaml
@@ -23,6 +23,7 @@ services:
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
+      wud.link.template: https://github.com/immich-app/immich/releases/tag/v$${major}.$${minor}.$${patch}
       wud.display.icon: sh:immich
       wud.tag.include: ^v\d+\.\d+\.\d+$$
       # Traefik
