--- a/docker/stacks/spotizerr/app.yaml
+++ b/docker/stacks/spotizerr/app.yaml
@@ -13,7 +13,8 @@ services:
       - /srv/application_data/spotizerr/app/data:/app/data
       - smb.multimedia:/app/downloads  # <-- Change this for your music library dir
       - /srv/application_data/spotizerr/app/logs:/app/logs  # <-- Volume for persistent logs
-      - /srv/application_data/spotizerr/app/cache:/app/.cache
+      # The below mount is part of the example compose from the project, however it causes errors on startup
+      # - /srv/application_data/spotizerr/app/cache:/app/.cache
     environment:
       HOST: 0.0.0.0 # Interface to bind to. Unless you know what you're doing, don't change this
       # UMASK: "0022"
