wud: switch from socket mount to socket proxy

--- a/docker/stacks/whatsupdocker/compose.yaml
+++ b/docker/stacks/whatsupdocker/compose.yaml
@@ -1,81 +1,7 @@
 include:
+  - app.yaml
+  - socketproxy.yaml
   - ../../networks/proxy_private.yaml
 
-services:
-  whatsupdocker:
-    image: getwud/wud:8.1.1
-    container_name: whatsupdocker
-    restart: always
-    # depends_on:
-    #   - whatsupdocker.socketproxy
-    environment:
-      WUD_WATCHER_LOCAL_WATCHBYDEFAULT: false
-      ## WUD_WATCHER_LOCALPROXY_WATCHBYDEFAULT: false
-      # Docker socket via proxy
-      ## WUD_WATCHER_LOCALPROXY_HOST: whatsupdocker.socketproxy
-      ## WUD_WATCHER_LOCALPROXY_PORT: 2375
-      # OAUTH
-      WUD_AUTH_OIDC_AUTHENTIK_CLIENTID: ${WUD_AUTH_OIDC_AUTHENTIK_CLIENTID}
-      WUD_AUTH_OIDC_AUTHENTIK_CLIENTSECRET: ${WUD_AUTH_OIDC_AUTHENTIK_CLIENTSECRET}
-      WUD_AUTH_OIDC_AUTHENTIK_DISCOVERY: https://auth.${NETWORK_DOMAIN}/application/o/${WHATSUPDOCKER_AUTHENTIK_SLUG:-wud}/.well-known/openid-configuration
-      WUD_AUTH_OIDC_AUTHENTIK_REDIRECT: true # optional (to skip internal login page)
-      # GHCR
-      WUD_REGISTRY_GHCR_PRIVATE_USERNAME: ${WUD_REGISTRY_GHCR_PRIVATE_USERNAME}
-      WUD_REGISTRY_GHCR_PRIVATE_TOKEN: ${WUD_REGISTRY_GHCR_PRIVATE_TOKEN}
-      # DOCKER HUB
-      WUD_REGISTRY_HUB_PUBLIC_LOGIN: ${WUD_REGISTRY_HUB_PUBLIC_LOGIN}
-      WUD_REGISTRY_HUB_PUBLIC_TOKEN: ${WUD_REGISTRY_HUB_PUBLIC_TOKEN}
-    volumes:
-      - /srv/application_data/whatsupdocker/app/store:/store
-      - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
-    networks:
-      - proxy_private
-      # - whatsupdocker.socketproxy
-    labels:
-      # Glance
-      glance.name: What's Up Docker
-      glance.icon: sh:wud
-      glance.url: https://${WHATSUPDOCKER_URL_PREFIX:-wud.}${NETWORK_DOMAIN}
-      glance.description: Docker image update checker
-      glance.category: core
-      glance.id: whats-up-docker
-      # What's Up Docker
-      wud.watch: true
-      wud.watch.digest: false
-      wud.display.icon: sh:wud
-      wud.tag.include: ^\d+\.\d+\.\d+$$
-      # Traefik
-      traefik.enable: "true"
-      # Traefik, Router
-      traefik.http.routers.whatsupdocker.entrypoints: websecure
-      traefik.http.routers.whatsupdocker.rule: Host(`${WHATSUPDOCKER_URL_PREFIX:-wud.}${NETWORK_DOMAIN}`)
-      traefik.http.routers.whatsupdocker.tls.certresolver: dns-cloudflare
-      traefik.http.routers.whatsupdocker.tls: "true"
-      # Traefik, Services
-      traefik.http.routers.whatsupdocker.service: whatsupdocker
-      traefik.http.services.whatsupdocker.loadbalancer.server.port: 3000
-    healthcheck:
-      test: curl --fail http://localhost:3000/health || exit 1
-      interval: 10s
-      timeout: 10s
-      retries: 3
-      start_period: 10s
-
-  # whatsupdocker.socketproxy:
-  #   image: ghcr.io/tecnativa/docker-socket-proxy:latest
-  #   container_name: whatsupdocker.socketproxy
-  #   restart: always
-  #   environment:
-  #     CONTAINERS: 1 # Allow access to viewing containers
-  #     POST: 0 # Disallow any POST operations (effectively read-only)
-  #   networks:
-  #     - whatsupdocker.socketproxy
-  #   # ports:
-  #   #   - 2375:2375
-  #   volumes:
-  #     - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
-  # labels:
-  #     # Glance
-  #     glance.name: Docker Socket Proxy
-  #     glance.parent: whats-up-docker
-  #     glance.category: core
+networks:
+  whatsupdocker.socketproxy:
