--- a/docker/stacks/whatsupdocker/komodo.toml
+++ b/docker/stacks/whatsupdocker/komodo.toml
@@ -15,6 +15,8 @@ webhook_enabled = false
 run_directory = "docker/stacks/whatsupdocker/"
 file_paths = [
   "compose.yaml",
+  "app.yaml",
+  "socketproxy.yaml",
   "../../networks/proxy_private.yaml"
 ]
 environment = """
