WUD: try to fix local dockersocketproxy access

--- a/docker/stacks/whatsupdocker/app.yaml
+++ b/docker/stacks/whatsupdocker/app.yaml
@@ -8,8 +8,7 @@ services:
     environment:
       # Local Docker socket via proxy
       WUD_WATCHER_LOCALPROXY_WATCHBYDEFAULT: false
-      WUD_WATCHER_LOCALPROXY_HOST: whatsupdocker.socketproxy
-      WUD_WATCHER_LOCALPROXY_PORT: 2375
+      WUD_WATCHER_LOCALPROXY_HOST: tcp://whatsupdocker.socketproxy:2375
       # OAUTH
       WUD_AUTH_OIDC_AUTHENTIK_CLIENTID: ${WUD_AUTH_OIDC_AUTHENTIK_CLIENTID}
       WUD_AUTH_OIDC_AUTHENTIK_CLIENTSECRET: ${WUD_AUTH_OIDC_AUTHENTIK_CLIENTSECRET}
