--- a/docker/stacks/whatsupdocker/socketproxy.yaml
+++ b/docker/stacks/whatsupdocker/socketproxy.yaml
@@ -5,6 +5,7 @@ services:
     restart: always
     environment:
       CONTAINERS: 1 # Allow access to viewing containers
+      IMAGES: 1
       POST: 0 # Disallow any POST operations (effectively read-only)
     networks:
       - whatsupdocker.socketproxy
