--- a/docker/stacks/whatsupdocker/app.yaml
+++ b/docker/stacks/whatsupdocker/app.yaml
@@ -8,6 +8,7 @@ services:
     environment:
       # Local Docker socket via proxy
       WUD_WATCHER_LOCALPROXY_WATCHBYDEFAULT: false
+      WUD_WATCHER_LOCALPROXY_WATCHALL: true
       WUD_WATCHER_LOCALPROXY_HOST: whatsupdocker.socketproxy
       WUD_WATCHER_LOCALPROXY_PORT: 2375
       # OAUTH
