--- a/docker/stacks/emulator-source-backups/komodo.toml
+++ b/docker/stacks/emulator-source-backups/komodo.toml
@@ -1,6 +1,9 @@
 [[stack]]
 name = "emulator-source-backups"
-tags = ["backups"]
+tags = [
+  "backups",
+  "nfs-mounts"
+]
 [stack.config]
 server = "hyperion"
 links = [
