--- a/docker/stacks/homepage/komodo.toml
+++ b/docker/stacks/homepage/komodo.toml
@@ -1,6 +1,9 @@
 [[stack]]
 name = "homepage"
-tags = ["core"]
+tags = [
+  "core",
+  "smb-mounts"
+]
 [stack.config]
 server = "hyperion"
 links = [
