--- a/docker/stacks/resilio-sync/komodo.toml
+++ b/docker/stacks/resilio-sync/komodo.toml
@@ -1,6 +1,9 @@
 [[stack]]
 name = "resilio-sync"
-tags = ["backups"]
+tags = [
+  "backups",
+  "smb-mounts"
+]
 [stack.config]
 server = "hyperion"
 links = [
